allign cv and cover letters

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
             {\par\centering\huge{Paul Brenker}} \\[0.3cm]
             \faGlobe~ Nationality: German\\
             \faBirthdayCake~ 1996 \\
-            \faMapMarker~ Tel Aviv, Israel \\
+            \faMapMarker~ Berlin, Germany \\
             \begin{spacing}{0.5}
                 {
                     \faCommentsO~ \underline{Languages:} \\
@@ -73,9 +73,9 @@
     %\small
     \section*{Experience}
     \begin{minipage}[t]{\leftcolwidth}
-        \begin{tabular}{p{0.2\textwidth}| p{0.65\textwidth}}
-            \cvevent{2023 - 2024}{SAP LeanIX}{Working Student}{Bonn, Germany}{Contributed to the LeanIX EAM product as part of an agile engineering team. Learned to work with numerous technologies used in microservice architectures. Developed core functionalities of new collaboration features in the LeanIX Product.}{img/leanix_logo.jpg}\\
-            \cvevent{2023}{LeanIX}{Intern}{Bonn, Germany}{Investigated and implemented evaluation tools for OpenAPI specifications. Developed a prototype for company-wide integration of using GitHub Actions}{img/leanix_logo_old.jpg}\\
+        \begin{tabular}{p{0.18\textwidth}| p{0.65\textwidth}}
+            \cvevent{2023 - 2024}{SAP LeanIX}{Working Student}{Bonn, Germany}{Contributed to the LeanIX EAM product as part of an agile engineering team. Learned to work with numerous technologies used in microservice architectures. Developed Backend REST Endpoints of the new Documents feature in LeanIX EAM. Established internal best practices for dealing with cursor based pagination in combination with dynamical filtering using the Java Persistence API.}{img/leanix_logo.jpg}\\
+            \cvevent{2023}{LeanIX}{Intern}{Bonn, Germany}{Investigated and implemented evaluation tools for OpenAPI specifications. Developed a prototype for company-wide integration pipeline using GitHub Actions}{img/leanix_logo_old.jpg}\\
             \cvevent{2022 - 2023}{University of Bonn}{Student assistant}{Bonn, Germany}{Administration and maintenance of institute for philosophy websites and IT equipment.}{img/uni_bonn_logo.png}\\
             \cvevent{2017 - 2018}{Academy of Sciences and Humanities}{Student Assistant}{Berlin, Germany}{Transcription of ancient Hebrew and Arabic texts. XML annotation of academic text for cross-referenced usage in a database. Proofreading of articles.}{img/bbaw_logo.jpg}
         \end{tabular}
@@ -100,14 +100,14 @@
     \switchcolumn
     \begin{minipage}[t]{\rightcolwidth}
         \section*{Education}
-        \begin{tabular}{p{0.2\textwidth}| p{0.65\textwidth}}
-            \cvevent{2019 - 2024}{Bonn-Rhein-Sieg University of Applied Sciences (H-BRS)}{B.S. Computer Science}{Bonn, Germany}{Computer Science degree with a final grade of 1.6 (90 \%). Specialized in Bioinformatics and Data Science where I did multiple applied projects. For my Thesis I chose the topic: Relevance of OpenAPI Linter Rules for Specification Quality.}{img/hbrs_logo.jpg} \\
+        \begin{tabular}{p{0.18\textwidth}| p{0.65\textwidth}}
+            \cvevent{2019 - 2024}{Bonn-Rhein-Sieg University of Applied Sciences (H-BRS)}{B.S. Computer Science}{Bonn, Germany}{Computer Science degree with a final grade of 1.6 GPA (90 \%) within the best 10 \% of faculty graduates. Specialized in Bioinformatics and Data Science where I did multiple applied projects. For my Thesis I chose the topic: Relevance of OpenAPI Linter Rules for Specification Quality.}{img/hbrs_logo.jpg} \\
             \cvevent{2015 - 2019}{Freie Universität zu Berlin}{B.A. History and Culture of the Middle East}{Berlin, Germany}{Language centered degree with long time abroad language courses in Egypt, Israel and Jordan. Thesis was written about gender-specific variations in the Arabic dialect of Amman, Jordan}{img/fu_logo.png} \\
         \end{tabular}
     \bigskip
     \begin{minipage}[t]{\rightcolwidth}
         \section*{Scholarships}
-        \begin{tabular}{>{\bfseries}r >{}p{0.70\textwidth}}
+        \begin{tabular}{>{\bfseries}p{0.12\textwidth} >{}p{0.7\textwidth}}
             2023 & Deutschlandstipendium -  Scholarship for ambitious and talented students                                                  \\
             2018 & Scholarship for a full Semester of intensive Arabic language courses at the German Jordanian University in Amman, Jordan. \\
             2018 & PROMOS -  Scholarship for an intensive Hebrew summer school at the Ben Gurion University of the Negev                     \\
@@ -116,12 +116,12 @@
     \bigskip
     \begin{minipage}[t]{\rightcolwidth}
         \section*{Volunteering}
-        \begin{tabular}{>{\bfseries}r >{}p{0.7\textwidth}}
+        \begin{tabular}{>{\bfseries}p{0.12\textwidth} >{}p{0.7\textwidth}}
             2014 & After graduating from high school I volunteered for nine months in Kibbutz Ein Hashlosha in Israel. During my time I worked mostly in agriculture and landscaping but also in the local garage where I helped to maintain the vehicles of the Kibbutz. \\
         \end{tabular}
         \bigskip
         \section*{Hobbies}
-        \begin{tabular}{>{\bfseries}r >{}p{0.7\textwidth}}
+        \begin{tabular}{>{\bfseries}p{0.12\textwidth} >{}p{0.7\textwidth}}
             Rowing  & I row since I am ten years old and participated in countless competitions including the German national sprint league. \\
             Cycling & I love to ride bicycles not just for sport but also in the everyday for a sustainable and balanced life.
         \end{tabular}
