added blog link and changed location

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -36,9 +36,9 @@
         \begin{minipage}[t]{0.47\textwidth}
             \vspace{0pt}
             {\par\centering\huge{Paul Brenker}} \\[0.3cm]
-            \faGlobe~ Nationality: German\\
+            \faGlobe~ Nationality: German, Work Visa Israel B1\\
             \faBirthdayCake~ 1996 \\
-            \faMapMarker~ Berlin, Germany \\
+            \faMapMarker~ Tel Aviv, Israel \\
             \begin{spacing}{0.5}
                 {
                     \faCommentsO~ \underline{Languages:} \\
@@ -55,8 +55,8 @@
             \faPhone~ +972 52 3002843 \\
             \faPhone~ +49 173 5287524 \\
 
+            \faLink~ \protect\url{pbrenk.com}\\
             \faAt~ \protect\url{paul.brenker@gmail.com} \\
-           % \faEnvelopeO~ Maxstr. 28, 53111 Bonn \\
             \faGithub~ \protect\url{github.com/paulbrenker} \\
             \faLinkedin~ \protect\url{linkedin.com/in/paul-brenker}\\
         \end{minipage}
