update status in israel

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -36,7 +36,7 @@
         \begin{minipage}[t]{0.47\textwidth}
             \vspace{0pt}
             {\par\centering\huge{Paul Brenker}} \\[0.3cm]
-            \faGlobe~ Nationality: German, Work Visa Israel B1\\
+            \faGlobe~ Nationality: German, Work Visa Israel B1 (pending)\\
             \faBirthdayCake~ 1996 \\
             \faMapMarker~ Tel Aviv, Israel \\
             \begin{spacing}{0.5}
@@ -90,6 +90,7 @@
                 \emph{NodeJS} & \emph{Angular} & \emph{REST APIs} \\
                 \emph{Python} & GitHub Actions & CI/CD Pipelines \\
                 LaTeX & PostgreSQL & Databases \\
+                & & HTML/CSS \\
                 & & Git, Linux, Docker \\
                 & & Data Analysis \& Visualization \\ 
                 & & Machine learning \\
