add www to link

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -55,7 +55,7 @@
             \faPhone~ +972 52 3002843 \\
             \faPhone~ +49 173 5287524 \\
 
-            \faLink~ \protect\url{pbrenk.com}\\
+            \faLink~ \protect\url{www.pbrenk.com}\\
             \faAt~ \protect\url{paul.brenker@gmail.com} \\
             \faGithub~ \protect\url{github.com/paulbrenker} \\
             \faLinkedin~ \protect\url{linkedin.com/in/paul-brenker}\\
