add new data to paulbrenker cv

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -36,7 +36,7 @@
         \begin{minipage}[t]{0.47\textwidth}
             \vspace{0pt}
             {\par\centering\huge{Paul Brenker}} \\[0.3cm]
-            \faGlobe~ Nationality: German, Work Visa Israel B1 (pending)\\
+            \faGlobe~ Nationality: German, Work Visa Israel B1 (from September)\\
             \faBirthdayCake~ 1996 \\
             \faMapMarker~ Tel Aviv, Israel \\
             \begin{spacing}{0.5}
@@ -44,7 +44,7 @@
                     \faCommentsO~ \underline{Languages:} \\
                     \begin{tabular}{l l}
                         \emph{German:} native & \emph{English:} full working proficiency \\
-                        \emph{Hebrew:} intermediate proficiency & \emph{Arabic:} basic knowledge \\ 
+                        \emph{Hebrew:} advanced proficiency & \emph{Arabic:} basic knowledge \\ 
                     \end{tabular}
                 }
             \end{spacing}
@@ -90,11 +90,16 @@
                 \emph{NodeJS} & \emph{Angular} & \emph{REST APIs} \\
                 \emph{Python} & GitHub Actions & CI/CD Pipelines \\
                 LaTeX & PostgreSQL & Databases \\
-                & & Git, Linux, Docker \\
+                & & Version Control with Git \\
+                & & Linux \\
+                & & Containerized Applications \\
                 & & Data Analysis \& Visualization \\ 
                 & & Machine learning \\
             \end{tabular}
             }
+            % \vspace{0.5em}
+            % \includegraphics[width=\linewidth]{scripts/skills_wordcloud.png}
+
         \end{minipage}\hfill
     \end{minipage}
     \switchcolumn
