add Microservices to Skills

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -91,7 +91,7 @@
                 \textbf{Programming}  & \textbf{Java}, \textbf{Kotlin}, Python, NodeJS (Typescript) \\
                 \textbf{Frameworks} & \textbf{Spring Boot}, \textbf{Angular}, JPA, GitHub Actions, PostgreSQL \\
                 \textbf{Technologies} & \textbf{REST APIs}, CI/CD, Databases, Git, Linux, AWS (certified), Containers, Data Analysis, Machine Learning, LaTeX\\
-                \textbf{Methodologies} & Agile, Scrum, Functional Programming \\
+                \textbf{Methodologies} & Functional Programming, Agile, Scrum, Microservices\\
             \end{tabular}
             }
 
