optimize spacing between sections

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -63,12 +63,14 @@
         \hfill
     \end{shaded*}
 \end{minipage}\\
-\bigskip
+\subsection*{}
+\vspace{-3.5em}
 \begin{minipage}{0.99\textwidth}
 \section*{Summary}
     I am a \textbf{Computer Science} graduate Software Engineer with a great passion for deeply technical topics. Recently I moved to Israel from Germany seeking for a full-time position. I come with valuable experience in a thriving Software Company where I had the chance to learn and grow rapidly as the product scaled from thousands to hundreds of thousands of users.\\
     Now I am excited to start a position to take on responsibility and to really make a difference. I am eager to navigate new challenges and to work in a fast-paced environment where things get done.
 \end{minipage}
+\bigskip
 
 \setlength{\columnsep}{1.7cm}
 \columnratio{0.47}[0.46]
