update cv items

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -63,10 +63,10 @@
     \end{shaded*}
 \end{minipage}\\
 \subsection*{}
-\vspace{-3.5em}
+\vspace{-3em}
 \begin{minipage}{0.99\textwidth}
 \section*{Summary}
-    I am a \textbf{Computer Science} graduate Software Engineer with a great passion for deeply technical topics. Recently I moved to Israel from Germany seeking for a full-time position. I come with valuable experience in a thriving Software Company where I had the chance to learn and grow rapidly as the product scaled from thousands to hundreds of thousands of users.\\
+    I am a \textbf{Computer Science} graduate Software Engineer with a great passion for deeply technical topics. Recently I moved to Israel from Germany seeking for a full-time position. My full work permit is set to be issued in September 2025 by the Israeli immigration authorities. I come with valuable experience in a thriving Software Company where I had the chance to learn and grow rapidly as the product scaled from thousands to hundreds of thousands of users.\\
     Now I am excited to start a position to take on responsibility and to really make a difference. I am eager to navigate new challenges and to work in a fast-paced environment where things get done.
 \end{minipage}
 \bigskip
@@ -85,6 +85,7 @@
                     \item Contributed to the LeanIX core product as part of an agile engineering team.
                     \item Learned to work with numerous technologies used in microservice architectures.
                     \item Designed Backend REST Service for the Architecture Decisions feature in LeanIX.
+                    %\item Implemented first Generative AI feature in the product portfolio summarizing To do items. and built an AI result test pipeline.
                     \item Built cursor based pagination in combination with dynamical filtering using the Spring Boot and JPA for multiple backend microservices.   
                 \end{itemize}}
                 {img/leanix_logo.jpg}\\
