include example projects for studies

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -157,9 +157,9 @@
             \cvevent{2019 - 2024}{Bonn-Rhein-Sieg University of Applied Sciences (H-BRS)}{B.S. Computer Science}{Bonn, Germany}{
                 \vspace{-.4cm}
                 \begin{itemize}[leftmargin=.3cm]
-                    \item Computer Science degree with a final grade of 1.6 GPA (90 \%) within the best 10 \% of faculty graduates.
-                    \item Specialized in Bioinformatics and Data Science where I did multiple applied projects.
-                    \item For my Thesis I chose the topic: Relevance of OpenAPI Linter Rules for Specification Quality. 
+                    \item Computer Science degree with a final grade of 1.6 GPA (German) (=90 \% (Israeli)) within the best 10 \% of faculty graduates.
+                    \item Specialized in Bioinformatics and Data Science where I did multiple applied projects. (E.g. \href{https://github.com/paulbrenker/decision-tsp}{github.com/paulbrenker/decision-tsp})
+                    \item For my Thesis I chose the topic: Relevance of OpenAPI Linter Rules for Specification Quality. (\href{https://github.com/paulbrenker/thesis}{github.com/paulbrenker/thesis})
                 \end{itemize}}
                 {img/hbrs_logo.jpg} \\
                 
