--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -83,10 +83,11 @@
                 \vspace{-.4cm}
                 \begin{itemize}[leftmargin=.3cm]    
                     \item Contributed to the LeanIX core product as part of an agile engineering team.
-                    \item Learned to work with numerous technologies used in microservice architectures.
-                    \item Designed Backend REST Service for the Architecture Decisions feature in LeanIX.
+                    %\item Learned to work with numerous technologies used in microservice architectures.
+                    \item Built backend REST service for the Architecture Decisions feature (\href{https://app.leanix.net/openapi-explorer?urls.primaryName=Documents}{Documents Service}).
                     %\item Implemented first Generative AI feature in the product portfolio summarizing To do items. and built an AI result test pipeline.
-                    \item Built cursor based pagination in combination with dynamical filtering using the Spring Boot and JPA for multiple backend microservices.   
+                    \item Improved performance of existing backend services by implementing cursor based pagination in combination with dynamical filtering using Spring Boot and JPA for multiple backend microservices.
+                    %\item See a private demo of applied technology stack and coding practices in my own web applications: \href{}{trailmenu}, \href{}{trailmenu-frontend}
                 \end{itemize}}
                 {img/leanix_logo.jpg}\\
 
@@ -115,12 +116,11 @@
 
             \begin{tabular}{>{\bfseries}p{0.25\textwidth} >{}p{0.61\textwidth}}
                 \textbf{Programming}  & 
-                    \textbf{Python}, 
-                    \textbf{NodeJS (Typescript)},
-                    \textbf{Java},
-                    Kotlin,\\
+                    \textbf{Java \& Kotlin for Backend},
+                    \textbf{Typescript for Frontend},
+                    \textbf{Python}\\
                 \textbf{Frameworks} & 
-                    \textbf{Selenium},
+                    %\textbf{Selenium},
                     \textbf{Spring Boot}, 
                     \textbf{Angular},
                     OpenAPI,
