--- a/style/modernsimplecv.sty
+++ b/style/modernsimplecv.sty
@@ -172,7 +172,21 @@
 {\color{#3}\rule[\baselineskip]{#1\textwidth}{#2}}\vspace{0.5em}
 }
 
-\newcommand{\cvevent}[6]{{#1} \newline {\includegraphics[height=1cm]{#6}} & \textbf{#2}\newline\textsc{#3} $\cdot$ {#4 ~\faMapMarker}\newline{\color{black!70}\small #5}\vspace{1.5em}}
+\newcommand{\cvevent}[6]{
+  {#1} \newline 
+  {\includegraphics[height=1cm]{#6}} & 
+  \textbf{#2}\newline
+  \textsc{#3} $\cdot$ {#4 ~\faMapMarker}\newline
+  {\color{black!70} 
+    \vspace{-.4cm}
+    \begin{itemize}[itemsep=-.2em, topsep=0.2em, left=0pt]
+      #5
+    \end{itemize}
+  }
+  \vspace{1.5em}
+}
+
+\newcommand{\cvskills}[2]{{\hfill#1} & {#2}}
 
 \newcommand{\cvdegree}[6]{{#1} & \textbf{#2}\newline\textsc{#3} $\cdot$ {#4 {\phantom{i}\footnotesize ~\faUniversity}}\newline{\color{black!70}\scriptsize #5}\vspace{0.5em} & \raisebox{-0.7\height}{\includegraphics[height=0.5cm]{#6}}}
 
